--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"genius-lyrics": "^4.4.6",
 		"genius-lyrics-api": "^3.2.0",
 		"google-tts-api": "^2.0.2",
+		"heroku-client": "^3.1.0",
 		"inshorts-api": "github:jacktheboss220/inshorts-api",
 		"insta-downloader": "github:jacktheboss220/insta-downloader",
 		"insta-fetcher": "^1.3.27",
