--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"openai": "^4.25.0",
 		"qrcode-terminal": "^0.12.0",
 		"sharp": "^0.32.6",
+		"tinyurl": "^1.1.7",
 		"truecallerjs": "^2.2.0",
 		"twitter-url-direct": "^1.0.9",
 		"ultimate-text-to-image": "^1.0.1",
