--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"link-preview-js": "^3.0.5",
 		"mongodb": "^6.3.0",
 		"openai": "^4.25.0",
+		"node-cron": "^3.0.3",
 		"qrcode-terminal": "^0.12.0",
 		"sharp": "^0.32.6",
 		"tinyurl": "^1.1.7",
