--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
 		"jsdom": "^24.0.0",
 		"link-preview-js": "^3.0.5",
 		"mongodb": "^6.3.0",
-		"openai": "^4.25.0",
 		"node-cron": "^3.0.3",
+		"openai": "^4.25.0",
 		"qrcode-terminal": "^0.12.0",
+		"sass": "^1.77.7",
 		"sharp": "^0.32.6",
 		"tinyurl": "^1.1.7",
 		"truecallerjs": "^2.2.0",
