--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
 	"version": "1.0.0",
 	"description": "well...Unique and intreating project",
 	"main": "index.js",
+	"private": true,
 	"directories": {
 		"lib": "lib"
+	},
+	"engines": {
+		"node": "21.x",
+		"python": "3.9.x"
 	},
 	"scripts": {
 		"start": "node index.js"
 	},
+	"keywords": [],
+	"author": "jaikishan",
+	"license": "MIT",
 	"dependencies": {
 		"@adiwajshing/baileys": "github:jacktheboss220/Baileys-New",
 		"@bochilteam/scraper": "^4.2.4",
@@ -22,6 +30,7 @@
 		"genius-lyrics": "^4.4.6",
 		"genius-lyrics-api": "^3.2.0",
 		"google-tts-api": "^2.0.2",
+		"heroku-client": "^3.1.0",
 		"inshorts-api": "github:jacktheboss220/inshorts-api",
 		"insta-downloader": "github:jacktheboss220/insta-downloader",
 		"insta-fetcher": "^1.3.27",
