--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"start": "node index.js"
 	},
 	"keywords": [],
-	"author": "jaikishan",
+	"author": "mahesh",
 	"license": "MIT",
 	"dependencies": {
 		"@adiwajshing/baileys": "github:jacktheboss220/Baileys-New",
@@ -37,12 +37,9 @@
 		"jsdom": "^24.0.0",
 		"link-preview-js": "^3.0.5",
 		"mongodb": "^6.3.0",
-		"node-cron": "^3.0.3",
 		"openai": "^4.25.0",
 		"qrcode-terminal": "^0.12.0",
-		"sass": "^1.77.7",
 		"sharp": "^0.32.6",
-		"tinyurl": "^1.1.7",
 		"truecallerjs": "^2.2.0",
 		"twitter-url-direct": "^1.0.9",
 		"ultimate-text-to-image": "^1.0.1",
